ビューのコメントアウトの修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -135,7 +135,7 @@
               <div class='sold-out'>
                 <span>Sold Out!!</span>
               </div>
-            <% end %>
+            <%#end %>
 
           </div>
           <div class='item-info'>
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-          <% end %>
+          <%# end %>
           </li>
         <% end %>
 
