--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,13 +31,11 @@
       <%= link_to "削除", "#", data: {turbo_method: :delete}, class:"item-destroy" %>
 
     <% else %>
-      <% if user_signed_in? %>
-        <% if @item.order.blank? %>
-          <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
-        <% else %>
-          <p>この商品は売り切れました</p>
-        <% end %>
-      <% end %>
+      <% #if user_signed_in? %>
+        <% #if @item.order.blank? %>
+          <%= #link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+        <% #end %>
+      <% #end %>
     <% end %>
 
     <div class="item-explain-box">
