--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,11 +9,11 @@
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <% #if @item.order.present? %>
+      <%#if @item.order.present? %> 
         <div class="sold-out">
           <span>Sold Out!!</span>
         </div>
-      <% #end %>
+      <%#end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
@@ -25,17 +25,16 @@
       </span>
     </div>
 
-    <% if user_signed_in? && @item.user == current_user %>
-      <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
-      <p class="or-text">or</p>
-      <%= link_to "削除", "#", data: {turbo_method: :delete}, class:"item-destroy" %>
-
-    <% else %>
-      <% #if user_signed_in? %>
-        <% #if @item.order.blank? %>
-          <%= #link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
-        <% #end %>
-      <% #end %>
+    <% if user_signed_in? %>
+      <% if @item.user == current_user %>
+        <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
+        <p class="or-text">or</p>
+        <%= link_to "削除", "#", data: {turbo_method: :delete}, class:"item-destroy" %>
+      <%#else %>
+        <%#if @item.order.blank? %>
+          <%#=link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+        <%#end %>
+      <% end %>
     <% end %>
 
     <div class="item-explain-box">
@@ -91,7 +90,7 @@
         不快な言葉遣いなどは利用制限や退会処分となることがあります。
       </p>
       <button type="submit" class="comment-btn">
-        <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
+        <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25" %>
         <span>コメントする<span>
       </button>
     </form>
