--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,7 +7,7 @@
       <%= @item.name %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.image ,class:"item-box-img" %>
+      <%= image_tag @item.image, class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
       <%#if @item.order.present? %> 
         <div class="sold-out">
@@ -30,10 +30,10 @@
         <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", item_path(@item), data: {turbo_method: :delete}, class:"item-destroy" %>
-      <%#else %>
-        <%#if @item.order.blank? %>
-          <%=link_to "購入画面に進む", "#", data: { turbo: false },class:"item-red-btn" %>
-        <%#end %>
+      <% else %>
+        <% if @item.order.blank? %>
+          <%=link_to "購入画面に進む", item_orders_path(@item), data: { turbo: false },class:"item-red-btn" %>
+        <% end %>
       <% end %>
     <% end %>
 
