--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,13 +8,13 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image, class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%#if @item.order.present? %> 
+      <%# 商品が売れている場合は、sold outを表示 %>
+      <% if @item.order.present? %> 
         <div class="sold-out">
           <span>Sold Out!!</span>
         </div>
-      <%#end %>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <% end %>
+      <%# //商品が売れている場合は、sold outを表示 %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -25,14 +25,20 @@
       </span>
     </div>
 
+    <%# ログイン中であれば表示 %>
     <% if user_signed_in? %>
+      <%# 出品者が未購入品であれば、編集・削除を表示 %>
       <% if @item.user == current_user %>
-        <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
-        <p class="or-text">or</p>
-        <%= link_to "削除", item_path(@item), data: {turbo_method: :delete}, class:"item-destroy" %>
-      <% else %>
         <% if @item.order.blank? %>
-          <%=link_to "購入画面に進む", item_orders_path(@item), data: { turbo: false },class:"item-red-btn" %>
+          <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
+          <p class="or-text">or</p>
+          <%= link_to "削除", item_path(@item), data: {turbo_method: :delete}, class:"item-destroy" %>
+      <%# 未購入品でない場合には、売り切れを表示 %>
+      <% elsif @item.order.present? %>
+        <%= link_to "売り切れました", item_path(@item), class:"disabled-button bold" %>
+      <%# 出品者以外かつ未購入品であれば、購入画面を表示 %>
+      <% else %>
+        <%=link_to "購入画面に進む", item_orders_path(@item), data: { turbo: false },class:"item-red-btn" %>
         <% end %>
       <% end %>
     <% end %>
